// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentsHeader renders with amountComments = 1000000 1`] = `
<div
  className="comments-header"
>
  <h4>
    1.000.000
     Comments
  </h4>
  <Button
    as="button"
    basic={true}
    compact={true}
    icon={true}
    labelPosition="left"
  >
    <Icon
      as="i"
      name="align left"
    />
    Sort by
  </Button>
</div>
`;

exports[`CommentsHeader renders with amountComments = null 1`] = `
<div
  className="comments-header"
>
  <h4>
    NaN
     Comments
  </h4>
  <Button
    as="button"
    basic={true}
    compact={true}
    icon={true}
    labelPosition="left"
  >
    <Icon
      as="i"
      name="align left"
    />
    Sort by
  </Button>
</div>
`;
